Configure eslint.json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,5 +21,11 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "import/no-unresolved": "error"
+    },
+    "settings": {
+        "import/resolver": {
+            "typescript": {}
+          }
     }
 }
