--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
         "@typescript-eslint/eslint-plugin": "^5.9.1",
         "@typescript-eslint/parser": "^5.9.1",
         "eslint": "^8.6.0",
+        "eslint-config-prettier": "^8.3.0",
         "eslint-import-resolver-typescript": "^2.5.0",
         "eslint-plugin-import": "^2.25.4",
-        "eslint-plugin-react": "^7.28.0"
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.28.0",
+        "prettier": "^2.5.1"
     }
 }
