Update eslintrc.json with prettier configs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,10 @@
         "es2021": true
     },
     "extends": [
-        "eslint:recommended",
         "plugin:react/recommended",
-        "plugin:@typescript-eslint/recommended"
+        "airbnb",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:prettier/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -17,8 +18,10 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react",
-        "@typescript-eslint"
+        "react", 
+        "react-hooks", 
+        "@typescript-eslint", 
+        "prettier"
     ],
     "rules": {
         "import/no-unresolved": "error"
